
* 2013-06-19 - marc.arens@open-xchange.com

 - Fix for bug 27011: RealtimeExceptions can now be transfered as error payload of Stanzas and thus inform the client about the error state

* 2013-06-19 - marcus.klein@open-xchange.com

 - Fix for bug 27065: If reading the replication monitor counter from the slave fails 10 times fall back to master to obtain a connection.

* 2013-06-19 - thorben.betten@open-xchange.com

 - Fix for bug 27133: Prefer HTML content on &view=text if associated part's plain-text content is empty or absent
 - Fix for bug 23399: Avoid quotes in non-ascii personal parts
 - Preparation to fix bug 27125: Improved handling of specified range limit
 - Fix for bug 27142: Fixed possible NPE on map clear() invocation
 - Fix for bug 27116: Added null guards for passed arguments to "java.lang.Runtime.exec(String[])"

* 2013-06-18 - thorben.betten@open-xchange.com

 - Fix for bug 26381: Handle possible RuntimeExceptions more gracefully

* 2013-06-17 - thorben.betten@open-xchange.com

 - Fix for bug 27060: Offer possibility to disable Hazelcast JMX MBean and logging system.
                      Refactored ConditionTreeMap management to use an improved concurrent collection to ensure
                      cached items are properly evicted after 5 minutres time-to-live threshold.
 - Fix for bug 23459: Remove foreign key constraints from obsolete tables

* 2013-06-15 - thorben.betten@open-xchange.com

 - Fix for bug 26994: Output exception (+ stack trace) to log file if message transport fails due to a wrong password
 - Fix for bug 25194: Removed auto-check of ports vs. SSL flag, but drop a warning instead
 - Fix for bug 24899: Honor HTML head's <base> tag when processing anchors and images

* 2013-06-14 - marcus.klein@open-xchange.com

 - Fix for bug 26859: Patched javax.mail implementation to create a Kerberos security context before SASL login takes place.

* 2013-06-13 - thorben.betten@open-xchange.com
